# comp254404-jp-winter2026

./: .gitattributes  .gitignore  README.md  pyproject.toml
JP_COMP254Lab1/: exercise1.py  exercise2.py  exercise3.py
JP_COMP254Lab2/: .gitignore  Exercises.java  exercise2_compute.py  exercise2_visualize.py  exercise3.py
JP_COMP254Lab3/: exercise1.py  exercise2.py  exercise3.py
JP_COMP254Lab4/: README.md  settings.gradle.kts
JP_COMP254Lab4/app/: build.gradle.kts
JP_COMP254Lab4/app/src/main/java/exercise1/: Exercise1.java  JPLinkedPositionalList.java  JPPositionalList.java
JP_COMP254Lab4/app/src/main/java/exercise2/: Exercise2.java
JP_COMP254Lab4/app/src/main/java/exercise3/: Exercise3.java
JP_COMP254Lab4/app/src/main/java/lists/: PositionalList.java
JP_COMP254Lab4/app/src/main/java/queues/: LinkedQueue.java  SinglyLinkedList.java
JP_COMP254Lab4/app/src/test/java/exercises/: Exercise1Test.java  Exercise2Test.java  Exercise3Test.java
JP_COMP254Lab5/: README.md  settings.gradle.kts
JP_COMP254Lab5/app/: build.gradle.kts
JP_COMP254Lab5/app/src/main/java/exercise1/: Exercise1.java
JP_COMP254Lab5/app/src/main/java/exercise2/: Exercise2.java
JP_COMP254Lab6/: README.md  settings.gradle.kts
JP_COMP254Lab6/app/: build.gradle.kts
JP_COMP254Lab7/: README.md  exercise1.py  exercise2.py  settings.gradle.kts  trees.py
JP_COMP254Lab7/app/: build.gradle.kts
lesson2/: arrays.py
src/comp254/: __init__.py
src/comp254/lesson2/: __init__.py  arrays.py  linkedlists.py
src/comp254/lesson3/: __init__.py  linkedlists.py
tests/: test_linkedlists.py
(+44 files in other folders)
