[build-system]
requires = ["uv-build~=0.9.26"]
build-backend = "uv_build"

[project]
name = "comp254"
version = "1.0.0"
description = ""
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dependencies = [
    "matplotlib~=3.10",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
