[build-system]
requires = ["uv-build~=0.10.9"]
build-backend = "uv_build"

[project]
name = "comp254"
version = "1.0.0"
description = ""
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dependencies = [
    "bokeh~=3.8",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = ["pytest>=9.0.3"]
